--- a/VetAppointment - APIs + Tests/VetAppointment - Working/dotCover.Output/src/5_98.html
+++ b/VetAppointment - APIs + Tests/VetAppointment - Working/dotCover.Output/src/5_98.html
@@ -2,27 +2,55 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <title>D:\Facultate\Anul_3\.NET\VetAppointment_S12\VetAppointment - APIs + Tests\VetAppointment - Working\VetAppointment.Integration.Test\VetClinicsControllerTests_.cs</title>
+    <title>D:\AN3_SEM1\DotNet\ProjectVETClone\VetAppointment - APIs + Tests\VetAppointment - Working\VetAppointment.Integration.Test\VetClinicsControllerTests_.cs</title>
     <script type="text/javascript" src="../js/dotcover.sourceview.js"></script>
     <link rel="stylesheet" type="text/css" href="../css/dotcover.report.css" />
   </head>
   <body>
     <pre id="content" class="source-code">
 #nullable disable
+using Microsoft.AspNetCore.Mvc.Testing;
+using Microsoft.AspNetCore.TestHost;
+using Microsoft.EntityFrameworkCore;
+using Microsoft.Extensions.DependencyInjection;
+using VetAppointment.API.Controllers;
 using VetAppointment.Domain.Enums;
+using VetAppointment.Infrastructure.Data;
 
 namespace VetAppointment.Integration.Tests
 {
-    public class VetClinicsControllerTests : BaseIntegrationTests, IDisposable
+    public class VetClinicsControllerTests : BaseIntegrationTests
     {
         private const string ApiURL = &quot;v1/api/vetclinics&quot;;
+
+        public VetClinicsControllerTests(WebApplicationFactory&lt;VetClinicsController&gt; factory) : base(factory)
+        {
+        }
 
         [Fact]
         public async void When_CreateClinic_Then_ShouldReturnClinicInTheGetRequestAsync()
         {
             // Arrange
+            var HttpClient = _factory.WithWebHostBuilder(builder =&gt;
+            {
+                builder.ConfigureTestServices(services =&gt;
+                {
+                    services.AddDbContext&lt;DatabaseContext&gt;(options =&gt;
+                    {
+                        options.UseSqlite(&quot;Data Source = VetAppointmentTest7.db&quot;);
+                    });
+                });
+            }).CreateClient(new WebApplicationFactoryClientOptions
+            {
+                AllowAutoRedirect = false,
+            });
+            DbContextOptions&lt;DatabaseContext&gt; options = new DbContextOptionsBuilder&lt;DatabaseContext&gt;()
+                .UseSqlite(&quot;Data Source = VetAppointmentTest7.db&quot;).Options;
+            DatabaseContext db = new DatabaseContext(options);
+            CleanDatabases(db);
+
             CreateVetClinicDto vetClinicDto = CreateClinitSUT();
-            
+
             // Act
             var createClinicResponse = await HttpClient.PostAsJsonAsync(ApiURL, vetClinicDto);
             var getClinicResult = await HttpClient.GetAsync(ApiURL);
@@ -41,7 +69,25 @@ namespace VetAppointment.Integration.Tests
         [Fact]
         public async Task When_RegisterPetsFamilyToClinic_Then_ShouldSavePetsInClinicAsync()
         {
-            // Arrange
+            //Arrange
+            var HttpClient = _factory.WithWebHostBuilder(builder =&gt;
+            {
+                builder.ConfigureTestServices(services =&gt;
+                {
+                    services.AddDbContext&lt;DatabaseContext&gt;(options =&gt;
+                    {
+                        options.UseSqlite(&quot;Data Source = VetAppointmentTest6.db&quot;);
+                    });
+                });
+            }).CreateClient(new WebApplicationFactoryClientOptions
+            {
+                AllowAutoRedirect = false,
+            });
+            DbContextOptions&lt;DatabaseContext&gt; options = new DbContextOptionsBuilder&lt;DatabaseContext&gt;()
+                .UseSqlite(&quot;Data Source = VetAppointmentTest6.db&quot;).Options;
+            DatabaseContext db = new DatabaseContext(options);
+            CleanDatabases(db);
+
             var createVetClinicDto = CreateClinitSUT();
             var createClinicResponse = await HttpClient.PostAsJsonAsync(ApiURL, createVetClinicDto);
             var pets = new List&lt;PetDto&gt; { CreatePetSUT() };
@@ -58,7 +104,25 @@ namespace VetAppointment.Integration.Tests
         [Fact]
         public async void When_RegisterEmptyListOfPetsToClinic_Then_ShouldReturnBadRequestAsync()
         {
-            // Arrange
+            //Arrange
+            var HttpClient = _factory.WithWebHostBuilder(builder =&gt;
+            {
+                builder.ConfigureTestServices(services =&gt;
+                {
+                    services.AddDbContext&lt;DatabaseContext&gt;(options =&gt;
+                    {
+                        options.UseSqlite(&quot;Data Source = VetAppointmentTest5.db&quot;);
+                    });
+                });
+            }).CreateClient(new WebApplicationFactoryClientOptions
+            {
+                AllowAutoRedirect = false,
+            });
+            DbContextOptions&lt;DatabaseContext&gt; options = new DbContextOptionsBuilder&lt;DatabaseContext&gt;()
+                .UseSqlite(&quot;Data Source = VetAppointmentTest5.db&quot;).Options;
+            DatabaseContext db = new DatabaseContext(options);
+            CleanDatabases(db);
+
             CreateVetClinicDto createVetClinicDto = CreateClinitSUT();
             var createClinicResponse = await HttpClient.PostAsJsonAsync(ApiURL, createVetClinicDto);
             var pets = new List&lt;PetDto&gt;();
@@ -74,7 +138,25 @@ namespace VetAppointment.Integration.Tests
         [Fact]
         public async void When_RegisterVetToClinic_Then_ShouldSaveVetInClinicAsync()
         {
-            // Arrange
+            //Arrange
+            var HttpClient = _factory.WithWebHostBuilder(builder =&gt;
+            {
+                builder.ConfigureTestServices(services =&gt;
+                {
+                    services.AddDbContext&lt;DatabaseContext&gt;(options =&gt;
+                    {
+                        options.UseSqlite(&quot;Data Source = VetAppointmentTest4.db&quot;);
+                    });
+                });
+            }).CreateClient(new WebApplicationFactoryClientOptions
+            {
+                AllowAutoRedirect = false,
+            });
+            DbContextOptions&lt;DatabaseContext&gt; options = new DbContextOptionsBuilder&lt;DatabaseContext&gt;()
+                .UseSqlite(&quot;Data Source = VetAppointmentTest4.db&quot;).Options;
+            DatabaseContext db = new DatabaseContext(options);
+            CleanDatabases(db);
+            
             var createVetClinicDto = CreateClinitSUT();
             var createClinicResponse = await HttpClient.PostAsJsonAsync(ApiURL, createVetClinicDto);
             var vet = CreateVetSUT();
@@ -92,6 +174,24 @@ namespace VetAppointment.Integration.Tests
         public async void When_UpdateVet_Then_ShouldUpdateVetInClinic()
         {
             // Arrange
+            var HttpClient = _factory.WithWebHostBuilder(builder =&gt;
+            {
+                builder.ConfigureTestServices(services =&gt;
+                {
+                    services.AddDbContext&lt;DatabaseContext&gt;(options =&gt;
+                    {
+                        options.UseSqlite(&quot;Data Source = VetAppointmentTest3.db&quot;);
+                    });
+                });
+            }).CreateClient(new WebApplicationFactoryClientOptions
+            {
+                AllowAutoRedirect = false,
+            });
+            DbContextOptions&lt;DatabaseContext&gt; options = new DbContextOptionsBuilder&lt;DatabaseContext&gt;()
+                .UseSqlite(&quot;Data Source = VetAppointmentTest3.db&quot;).Options;
+            DatabaseContext db = new DatabaseContext(options);
+            CleanDatabases(db);
+
             var clinicSUT = CreateClinitSUT();
             var createClinicResponse = await HttpClient.PostAsJsonAsync(ApiURL, clinicSUT);
             var clinic = await createClinicResponse.Content.ReadFromJsonAsync&lt;VetClinicDto&gt;();
@@ -113,7 +213,25 @@ namespace VetAppointment.Integration.Tests
         [Fact]
         public async void When_DeleteVet_Then_ShouldDeleteVetFromClinic()
         {
-            // Arrange
+            //Arrange
+            var HttpClient = _factory.WithWebHostBuilder(builder =&gt;
+            {
+                builder.ConfigureTestServices(services =&gt;
+                {
+                    services.AddDbContext&lt;DatabaseContext&gt;(options =&gt;
+                    {
+                        options.UseSqlite(&quot;Data Source = VetAppointmentTest2.db&quot;);
+                    });
+                });
+            }).CreateClient(new WebApplicationFactoryClientOptions
+            {
+                AllowAutoRedirect = false,
+            });
+            DbContextOptions&lt;DatabaseContext&gt; options = new DbContextOptionsBuilder&lt;DatabaseContext&gt;()
+                .UseSqlite(&quot;Data Source = VetAppointmentTest2.db&quot;).Options;
+            DatabaseContext db = new DatabaseContext(options);
+            CleanDatabases(db);
+
             var clinicSUT = CreateClinitSUT();
             var createClinicResponse = await HttpClient.PostAsJsonAsync(ApiURL, clinicSUT);
             var clinic = await createClinicResponse.Content.ReadFromJsonAsync&lt;VetClinicDto&gt;();
@@ -133,7 +251,25 @@ namespace VetAppointment.Integration.Tests
         [Fact]
         public async void When_DeleteClinic_Then_ShouldDeleteClinic()
         {
-            // Arrange
+            //Arrange
+            var HttpClient = _factory.WithWebHostBuilder(builder =&gt;
+            {
+                builder.ConfigureTestServices(services =&gt;
+                {
+                    services.AddDbContext&lt;DatabaseContext&gt;(options =&gt;
+                    {
+                        options.UseSqlite(&quot;Data Source = VetAppointmentTest1.db&quot;);
+                    });
+                });
+            }).CreateClient(new WebApplicationFactoryClientOptions
+            {
+                AllowAutoRedirect = false,
+            });
+            DbContextOptions&lt;DatabaseContext&gt; options = new DbContextOptionsBuilder&lt;DatabaseContext&gt;()
+                .UseSqlite(&quot;Data Source = VetAppointmentTest1.db&quot;).Options;
+            DatabaseContext db = new DatabaseContext(options);
+            CleanDatabases(db);
+
             var clinicSUT = CreateClinitSUT();
             var createClinicResponse = await HttpClient.PostAsJsonAsync(ApiURL, clinicSUT);
             var clinic = await createClinicResponse.Content.ReadFromJsonAsync&lt;VetClinicDto&gt;();
@@ -182,17 +318,12 @@ namespace VetAppointment.Integration.Tests
                 Specialisation = VetSpecialisation.Nutritionist.ToString()
             };
         }
-
-        public void Dispose()
-        {
-            CleanDatabases();
-        }
     }
 }
 
     </pre>
     <script type="text/javascript">
-      highlightRanges([[12,9,12,10,1],[14,13,14,65,1],[17,13,17,95,1],[18,13,18,69,1],[21,13,21,60,1],[22,13,22,81,1],[24,13,24,55,1],[25,13,25,97,1],[27,13,27,43,1],[28,13,28,42,1],[29,9,29,10,1],[33,9,33,10,1],[35,13,35,56,1],[36,13,36,101,1],[37,13,37,60,1],[38,13,38,95,1],[41,13,41,103,1],[45,13,45,75,1],[46,9,46,10,1],[50,9,50,10,1],[52,13,52,71,1],[53,13,53,101,1],[54,13,54,43,1],[55,13,55,95,1],[58,13,58,103,1],[61,13,61,89,1],[62,9,62,10,1],[66,9,66,10,1],[68,13,68,56,1],[69,13,69,101,1],[70,13,70,38,1],[71,13,71,95,1],[74,13,74,101,1],[77,13,77,54,1],[78,13,78,75,0],[79,9,79,10,0],[83,9,83,10,1],[85,13,85,47,1],[86,13,86,92,1],[87,13,87,95,1],[89,13,89,41,1],[90,13,90,104,1],[91,13,91,80,1],[93,13,93,43,1],[96,13,96,112,1],[99,13,99,57,1],[100,13,100,80,1],[101,9,101,10,1],[105,9,105,10,1],[107,13,107,47,1],[108,13,108,92,1],[109,13,109,95,1],[111,13,111,41,1],[112,13,112,104,1],[113,13,113,80,1],[116,13,116,104,1],[119,13,119,57,1],[120,13,120,80,1],[121,9,121,10,1],[125,9,125,10,1],[127,13,127,47,1],[128,13,128,92,1],[129,13,129,95,1],[132,13,132,94,1],[135,13,135,60,1],[136,13,136,83,1],[137,9,137,10,1],[140,9,140,10,1],[141,13,148,15,1],[149,9,149,10,1],[152,9,152,10,1],[153,13,159,15,1],[160,9,160,10,1],[163,9,163,10,1],[164,13,173,15,1],[174,9,174,10,1],[177,9,177,10,1],[178,13,178,30,1],[179,9,179,10,1]]);
+      highlightRanges([[16,97,16,110,1],[17,9,17,10,1],[18,9,18,10,1],[22,9,22,10,1],[24,13,25,13,1],[25,13,25,14,1],[25,14,26,17,1],[26,17,27,17,1],[27,17,27,18,1],[27,18,28,21,1],[28,21,29,21,1],[29,21,29,22,1],[29,22,30,25,1],[30,25,30,83,1],[30,83,31,21,1],[31,21,31,22,1],[31,22,31,24,1],[31,24,32,17,1],[32,17,32,18,1],[32,18,32,20,1],[32,20,33,13,1],[33,13,33,14,1],[33,14,36,16,1],[37,13,38,76,1],[39,13,39,63,1],[40,13,40,32,1],[42,13,42,65,1],[45,13,45,95,1],[46,13,46,69,1],[49,13,49,60,1],[50,13,50,81,1],[52,13,52,55,1],[53,13,53,97,1],[55,13,55,43,1],[56,13,56,42,1],[57,9,57,10,1],[61,9,61,10,1],[63,13,64,13,1],[64,13,64,14,1],[64,14,65,17,1],[65,17,66,17,1],[66,17,66,18,1],[66,18,67,21,1],[67,21,68,21,1],[68,21,68,22,1],[68,22,69,25,1],[69,25,69,83,1],[69,83,70,21,1],[70,21,70,22,1],[70,22,70,24,1],[70,24,71,17,1],[71,17,71,18,1],[71,18,71,20,1],[71,20,72,13,1],[72,13,72,14,1],[72,14,75,16,1],[76,13,77,76,1],[78,13,78,63,1],[79,13,79,32,1],[81,13,81,56,1],[82,13,82,101,1],[83,13,83,60,1],[84,13,84,95,1],[87,13,87,103,1],[91,13,91,75,1],[92,9,92,10,1],[96,9,96,10,1],[98,13,99,13,1],[99,13,99,14,1],[99,14,100,17,1],[100,17,101,17,1],[101,17,101,18,1],[101,18,102,21,1],[102,21,103,21,1],[103,21,103,22,1],[103,22,104,25,1],[104,25,104,83,1],[104,83,105,21,1],[105,21,105,22,1],[105,22,105,24,1],[105,24,106,17,1],[106,17,106,18,1],[106,18,106,20,1],[106,20,107,13,1],[107,13,107,14,1],[107,14,110,16,1],[111,13,112,76,1],[113,13,113,63,1],[114,13,114,32,1],[116,13,116,71,1],[117,13,117,101,1],[118,13,118,43,1],[119,13,119,95,1],[122,13,122,103,1],[125,13,125,89,1],[126,9,126,10,1],[130,9,130,10,1],[132,13,133,13,1],[133,13,133,14,1],[133,14,134,17,1],[134,17,135,17,1],[135,17,135,18,1],[135,18,136,21,1],[136,21,137,21,1],[137,21,137,22,1],[137,22,138,25,1],[138,25,138,83,1],[138,83,139,21,1],[139,21,139,22,1],[139,22,139,24,1],[139,24,140,17,1],[140,17,140,18,1],[140,18,140,20,1],[140,20,141,13,1],[141,13,141,14,1],[141,14,144,16,1],[145,13,146,76,1],[147,13,147,63,1],[148,13,148,32,1],[150,13,150,56,1],[151,13,151,101,1],[152,13,152,38,1],[153,13,153,95,1],[156,13,156,101,1],[159,13,159,54,1],[160,13,160,75,1],[161,9,161,10,1],[165,9,165,10,1],[167,13,168,13,1],[168,13,168,14,1],[168,14,169,17,1],[169,17,170,17,1],[170,17,170,18,1],[170,18,171,21,1],[171,21,172,21,1],[172,21,172,22,1],[172,22,173,25,1],[173,25,173,83,1],[173,83,174,21,1],[174,21,174,22,1],[174,22,174,24,1],[174,24,175,17,1],[175,17,175,18,1],[175,18,175,20,1],[175,20,176,13,1],[176,13,176,14,1],[176,14,179,16,1],[180,13,181,76,1],[182,13,182,63,1],[183,13,183,32,1],[185,13,185,47,1],[186,13,186,92,1],[187,13,187,95,1],[189,13,189,41,1],[190,13,190,104,1],[191,13,191,80,1],[193,13,193,43,1],[196,13,196,112,1],[199,13,199,57,1],[200,13,200,80,1],[201,9,201,10,1],[205,9,205,10,1],[207,13,208,13,1],[208,13,208,14,1],[208,14,209,17,1],[209,17,210,17,1],[210,17,210,18,1],[210,18,211,21,1],[211,21,212,21,1],[212,21,212,22,1],[212,22,213,25,1],[213,25,213,83,1],[213,83,214,21,1],[214,21,214,22,1],[214,22,214,24,1],[214,24,215,17,1],[215,17,215,18,1],[215,18,215,20,1],[215,20,216,13,1],[216,13,216,14,1],[216,14,219,16,1],[220,13,221,76,1],[222,13,222,63,1],[223,13,223,32,1],[225,13,225,47,1],[226,13,226,92,1],[227,13,227,95,1],[229,13,229,41,1],[230,13,230,104,1],[231,13,231,80,1],[234,13,234,104,1],[237,13,237,57,1],[238,13,238,80,1],[239,9,239,10,1],[243,9,243,10,1],[245,13,246,13,1],[246,13,246,14,1],[246,14,247,17,1],[247,17,248,17,1],[248,17,248,18,1],[248,18,249,21,1],[249,21,250,21,1],[250,21,250,22,1],[250,22,251,25,1],[251,25,251,83,1],[251,83,252,21,1],[252,21,252,22,1],[252,22,252,24,1],[252,24,253,17,1],[253,17,253,18,1],[253,18,253,20,1],[253,20,254,13,1],[254,13,254,14,1],[254,14,257,16,1],[258,13,259,76,1],[260,13,260,63,1],[261,13,261,32,1],[263,13,263,47,1],[264,13,264,92,1],[265,13,265,95,1],[268,13,268,94,1],[271,13,271,60,1],[272,13,272,83,1],[273,9,273,10,1],[276,9,276,10,1],[277,13,284,15,1],[285,9,285,10,1],[288,9,288,10,1],[289,13,295,15,1],[296,9,296,10,1],[299,9,299,10,1],[300,13,309,15,1],[310,9,310,10,1]]);
     </script>
   </body>
 </html>
