--- a/VetAppointment - APIs + Tests/VetAppointment - Working/dotCover.Output/src/69_406.html
+++ b/VetAppointment - APIs + Tests/VetAppointment - Working/dotCover.Output/src/69_406.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <title>D:\Facultate\Anul_3\.NET\VetAppointment_S12\VetAppointment - APIs + Tests\VetAppointment - Working\VetAppointment.Business.Test\VetTets.cs</title>
+    <title>D:\AN3_SEM1\DotNet\ProjectVETClone\VetAppointment - APIs + Tests\VetAppointment - Working\VetAppointment.Business.Test\VetTets.cs</title>
     <script type="text/javascript" src="../js/dotcover.sourceview.js"></script>
     <link rel="stylesheet" type="text/css" href="../css/dotcover.report.css" />
   </head>
